[gd_scene load_steps=38 format=3 uid="uid://dcgcpbp1np8l5"]

[ext_resource type="Script" path="res://characters/merchant/GhostMerchant.gd" id="1_4rjv5"]
[ext_resource type="Resource" uid="uid://m4xa8kd8ronq" path="res://items/resources/gear/golden_bracelet.tres" id="2_mdswo"]
[ext_resource type="Texture2D" uid="uid://c636v88if3x54" path="res://assets/Ghost-Files/PNG/ghost-vanish.png" id="2_wll0m"]
[ext_resource type="Resource" uid="uid://dsowukkicykrv" path="res://items/resources/gear/golden_necklace.tres" id="3_d4huy"]
[ext_resource type="Script" path="res://characters/enemies/monk/PlayerDetectionArea.gd" id="3_u3oe5"]
[ext_resource type="Script" path="res://common/interactable_area/InteractableArea.gd" id="4_42hcv"]
[ext_resource type="Resource" uid="uid://bjctp8ffj0saj" path="res://items/resources/buffs/potion_amount_buff.tres" id="4_x5tfi"]
[ext_resource type="Texture2D" uid="uid://pyg2g4i3vvs0" path="res://assets/Ghost-Files/PNG/ghost-appears.png" id="5_c88i8"]
[ext_resource type="Resource" uid="uid://dlffu5sfmctoa" path="res://items/resources/buffs/potion_strength_buff.tres" id="5_eptud"]
[ext_resource type="Texture2D" uid="uid://bnu44qb35jrc4" path="res://assets/Ghost-Files/PNG/ghost-idle.png" id="6_sdvft"]
[ext_resource type="Script" path="res://characters/merchant/state/IdlingState.gd" id="8_jupnl"]
[ext_resource type="Script" path="res://characters/merchant/state/ApearingState.gd" id="9_jyw8j"]
[ext_resource type="Script" path="res://characters/merchant/state/VanishingState.gd" id="10_wgu84"]
[ext_resource type="Script" path="res://characters/common/CharacterStateMachine.gd" id="11_hkbg0"]
[ext_resource type="Script" path="res://characters/merchant/state/HidingState.gd" id="11_s2ldt"]
[ext_resource type="PackedScene" uid="uid://phd5qyfq0ak2" path="res://interface/merchant/Shop.tscn" id="12_rn8wu"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8bmbn"]
size = Vector2(352, 162)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_cnf6d"]
radius = 14.0
height = 52.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_s3dx6"]
radius = 43.0
height = 104.0

[sub_resource type="Animation" id="Animation_brru5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_b087y"]
resource_name = "apear"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_c88i8")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}

[sub_resource type="Animation" id="Animation_e26yl"]
resource_name = "hidden"
length = 0.5
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_wll0m")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [3, 4, 5]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [7]
}

[sub_resource type="Animation" id="Animation_bjr7c"]
resource_name = "idle"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("6_sdvft")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [7]
}

[sub_resource type="Animation" id="Animation_rab77"]
resource_name = "vanish"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_wll0m")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_g57jr"]
_data = {
"RESET": SubResource("Animation_brru5"),
"apear": SubResource("Animation_b087y"),
"hidden": SubResource("Animation_e26yl"),
"idle": SubResource("Animation_bjr7c"),
"vanish": SubResource("Animation_rab77")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_peifv"]
animation = &"apear"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_bb5be"]
animation = &"hidden"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_gg2de"]
animation = &"idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_81olc"]
animation = &"vanish"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_70i4a"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_rx6dj"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_sxmx1"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_a72qb"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_88qao"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_doahu"]
states/Start/position = Vector2(154.667, 86.6667)
states/apear/node = SubResource("AnimationNodeAnimation_peifv")
states/apear/position = Vector2(476.667, 88)
states/hidden/node = SubResource("AnimationNodeAnimation_bb5be")
states/hidden/position = Vector2(314.667, 86)
states/idle/node = SubResource("AnimationNodeAnimation_gg2de")
states/idle/position = Vector2(650.667, 92.6667)
states/vanish/node = SubResource("AnimationNodeAnimation_81olc")
states/vanish/position = Vector2(496, 190.667)
transitions = ["Start", "hidden", SubResource("AnimationNodeStateMachineTransition_70i4a"), "hidden", "apear", SubResource("AnimationNodeStateMachineTransition_rx6dj"), "apear", "idle", SubResource("AnimationNodeStateMachineTransition_sxmx1"), "idle", "vanish", SubResource("AnimationNodeStateMachineTransition_a72qb"), "vanish", "hidden", SubResource("AnimationNodeStateMachineTransition_88qao")]

[sub_resource type="Gradient" id="Gradient_r4ar1"]
offsets = PackedFloat32Array(0, 0.648101)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_nqw8p"]
gradient = SubResource("Gradient_r4ar1")
width = 128
height = 128
fill = 1
fill_from = Vector2(0.5, 0.5)

[node name="GhostMerchant" type="CharacterBody2D"]
texture_filter = 1
script = ExtResource("1_4rjv5")
shop_items = Array[Resource("res://items/ShopItem.gd")]([ExtResource("2_mdswo"), ExtResource("3_d4huy"), ExtResource("4_x5tfi"), ExtResource("5_eptud")])

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_wll0m")
hframes = 7

[node name="PlayerDetectionArea" type="Area2D" parent="Sprite2D"]
visible = false
script = ExtResource("3_u3oe5")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite2D/PlayerDetectionArea"]
visible = false
position = Vector2(0, -58)
shape = SubResource("RectangleShape2D_8bmbn")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(-1, 7)
shape = SubResource("CapsuleShape2D_cnf6d")

[node name="InteractableArea" type="Area2D" parent="."]
visible = false
position = Vector2(0, -16)
script = ExtResource("4_42hcv")
action_name = "open Merchant's shop"

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractableArea"]
position = Vector2(0, -9)
shape = SubResource("CapsuleShape2D_s3dx6")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_g57jr")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
libraries = {
"": SubResource("AnimationLibrary_g57jr")
}
tree_root = SubResource("AnimationNodeStateMachine_doahu")
anim_player = NodePath("../AnimationPlayer")

[node name="PointLight2D" type="PointLight2D" parent="."]
color = Color(0, 1, 1, 1)
range_z_max = 200
texture = SubResource("GradientTexture2D_nqw8p")

[node name="CharacterStateMachine" type="Node" parent="."]
script = ExtResource("11_hkbg0")

[node name="Idling" type="Node" parent="CharacterStateMachine"]
script = ExtResource("8_jupnl")

[node name="Apearing" type="Node" parent="CharacterStateMachine"]
script = ExtResource("9_jyw8j")

[node name="Vanishing" type="Node" parent="CharacterStateMachine"]
script = ExtResource("10_wgu84")

[node name="Hiding" type="Node" parent="CharacterStateMachine"]
script = ExtResource("11_s2ldt")

[node name="Shop" parent="." instance=ExtResource("12_rn8wu")]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = -285.0
offset_right = 101.0
offset_bottom = -50.0
grow_horizontal = 2

[connection signal="animation_finished" from="AnimationTree" to="CharacterStateMachine/Apearing" method="_on_animation_tree_animation_finished"]
[connection signal="animation_finished" from="AnimationTree" to="CharacterStateMachine/Vanishing" method="_on_animation_tree_animation_finished"]
